force-app/main/default/objects/CRM_Mass_Email__c.object
<CustomObject>
    <fields>
        <fullName>Add_Base_Signature__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add Base Signature</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Add_CRICOS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add CRICOS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Email__c</fullName>
        <label>Additional Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved_Date_Time__c</fullName>
        <label>Approved Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Campaign_Name__c</fullName>
        <label>Campaign Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Mass Email Campaign Name</description>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>CRM Mass Emails</relationshipLabel>
        <relationshipName>CRM_Mass_Emails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Custom_Message__c</fullName>
        <label>Custom Message</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email_Body__c</fullName>
        <label>Email Body</label>
        <length>130000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Email_Template__c</fullName>
        <label>Email Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From__c</fullName>
        <label>From</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>HTML_Email__c</fullName>
        <label>HTML Email</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Message_Header__c</fullName>
        <label>Message Header</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notify__c</fullName>
        <label>Notify</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Recipients__c</fullName>
        <formula>Campaign__r.Total_Members__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Recipients</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Profile__c</fullName>
        <formula>Owner:User.Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reply_To__c</fullName>
        <label>Reply To</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SMS_Body__c</fullName>
        <label>SMS Body</label>
        <length>1600</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SMS_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>SMS Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Send_Date_Time__c</fullName>
        <description>Specify when to send the SMS</description>
        <label>Send Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Send_Type__c</fullName>
        <label>Send Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>SMS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of the Mass Email</description>
        <inlineHelpText>Status of the Mass Email</inlineHelpText>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>In Progess</fullName>
                    <isActive>false</isActive>
                    <label>In Progess</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Urgent_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Urgent Email</label>
        <type>Checkbox</type>
    </fields>
    <label>CRM Mass Email</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Approved_Date_Time__c</columns>
        <columns>Campaign__c</columns>
        <columns>Subject__c</columns>
        <columns>Status__c</columns>
        <columns>Send_Type__c</columns>
        <columns>Number_of_Recipients__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_CRM_Emails</fullName>
        <columns>NAME</columns>
        <columns>Campaign__c</columns>
        <columns>Email_Template__c</columns>
        <columns>Status__c</columns>
        <columns>Number_of_Recipients__c</columns>
        <columns>Approved_Date_Time__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All CRM Emails</label>
    </listViews>
    <nameField>
        <displayFormat>ME-{0000}</displayFormat>
        <label>MeId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CRM Mass Emails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>